force-app/main/default/objects/Async_Transaction_Event__e/Async_Transaction_Event__e.object-meta.xml
<CustomObject>
    <description>This PE will be store to process ATF payloads using Async_Transaction_Settings__mdt</description>
    <label>Async Transaction Event</label>
    <pluralLabel>Async Transaction Events</pluralLabel>
</CustomObject>