force-app/main/default/objects/Async_Transaction_Event__e/fields/ATF_Settings__c.field-meta.xml
<CustomField>
    <fullName>ATF_Settings__c</fullName>
    <label>ATF Settings</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>