force-app/main/default/objects/Async_Transaction_Event__e/fields/Run_By__c.field-meta.xml
<CustomField>
    <fullName>Run_By__c</fullName>
    <label>Run By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>