force-app/main/default/objects/Async_Transaction_Event__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Universally unique identifier</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>